test/corpus/query.txt
==========================
ampersat
==========================

# object: { "foo@bar": { "@buz" : [ { "wibble@" : 42 } ] } }
# result: 42
.foo@bar.@buz[0].wibble@

--------------------------

(program
  (comment)
  (comment)
  (query
    (event)
    (path
      (field)
      (field)
      (index)
      (field))))

==========================
array
==========================

# result: 2

[0, { "bar": 2 }][1].bar

--------------------------

(program
  (comment)
  (query
    (array
      (integer)
      (object
        (entry
          (key
            (string))
          (value
            (integer)))))
    (path
      (index)
      (field))))

==========================
array indexing
==========================

# result:
#
# [
#   null,
#   null,
#   null,
#   "a",
#   "b",
#   "a",
#   "b",
#   null
# ]

[
    [][0],
    [][-1],
    ["a", "b"][-3],
    ["a", "b"][-2],
    ["a", "b"][-1],
    ["a", "b"][0],
    ["a", "b"][1],
    ["a", "b"][2],
]

--------------------------


(program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (array
    (query
      (array)
      (path
        (index)))
    (query
      (array)
      (path
        (index)))
    (query
      (array
        (string)
        (string))
      (path
        (index)))
    (query
      (array
        (string)
        (string))
      (path
        (index)))
    (query
      (array
        (string)
        (string))
      (path
        (index)))
    (query
      (array
        (string)
        (string))
      (path
        (index)))
    (query
      (array
        (string)
        (string))
      (path
        (index)))
    (query
      (array
        (string)
        (string))
      (path
        (index)))))

==========================
container_side_effect
==========================

# result: {"type": { "bytes": true }, "value": "foo"}
. = 3
{. = "foo"}.x
{
    "value": .,
    "type": type_def(.)
}

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (query
        (event)))
    right: (integer))
  (query
    (block
      (assignment
        left: (assign_target
          (query
            (event)))
        right: (string)))
    (path
      (field)))
  (object
    (entry
      (key
        (string))
      (value
        (query
          (event))))
    (entry
      (key
        (string))
      (value
        (function_call
          function_name: (ident)
          arguments: (argument
            (query
              (event))))))))
==========================
external
==========================

# object: { "foo": 5 }
# result: 5

.foo

--------------------------

(program
  (comment)
  (comment)
  (query
    (event)
    (path
      (field))))

==========================
function_call
==========================

# result: 5

parse_json!("{ \"foo\": 5 }").foo

--------------------------

(program
  (comment)
  (query
    (function_call
      function_name: (ident)
      arguments: (argument
        (string
          (escape_sequence)
          (escape_sequence))))
    (path
      (field))))

==========================
function_call_error
==========================

# result: "function call error for \"upcase\" at (10:24): expected string, got null"

_, err = upcase(.thing).thing
err

--------------------------

(program
  (comment)
  (assignment
    left: (assign_infallible_target
      ok: (assign_target
        (noop))
      err: (assign_target
        (ident)))
    right: (query
      (function_call
        function_name: (ident)
        arguments: (argument
          (query
            (event)
            (path
              (field)))))
      (path
        (field))))
  (ident))

==========================
function_side_effect
==========================

# result: {"type": { "null": true }, "value": null}
. = 3
del(.).x
{
    "value": .,
    "type": type_def(.)
}

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (query
        (event)))
    right: (integer))
  (query
    (function_call
      function_name: (ident)
      arguments: (argument
        (query
          (event))))
    (path
      (field)))
  (object
    (entry
      (key
        (string))
      (value
        (query
          (event))))
    (entry
      (key
        (string))
      (value
        (function_call
          function_name: (ident)
          arguments: (argument
            (query
              (event))))))))

==========================
mixed
==========================

# result: true

[
    null,
    {
        "foo": [
            {
                "bar": parse_json!("{ \"baz\": {\"0tar\": true} }").baz,
            }
        ]
    }
][1].foo[0].bar.0tar

--------------------------

(program
  (comment)
  (query
    (array
      (null)
      (object
        (entry
          (key
            (string))
          (value
            (array
              (object
                (entry
                  (key
                    (string))
                  (value
                    (query
                      (function_call
                        function_name: (ident)
                        arguments: (argument
                          (string
                            (escape_sequence)
                            (escape_sequence)
                            (escape_sequence)
                            (escape_sequence))))
                      (path
                        (field)))))))))))
    (path
      (index)
      (field)
      (index)
      (field)
      (field
        (ident)))))

==========================
mixed_case
==========================

# result: 42

_STRANGE.path = { "PATH": 42 }
.__ThIs_.Most_Certainly.___Is_Some_Kind_of___ = _STRANGE.path

.__ThIs_.Most_Certainly.___Is_Some_Kind_of___.PATH

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (query
        (ident)
        (path
          (field))))
    right: (object
      (entry
        (key
          (string))
        (value
          (integer)))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          (field)
          (field)
          (field))))
    right: (query
      (ident)
      (path
        (field))))
  (query
    (event)
    (path
      (field)
      (field)
      (field)
      (field))))

==========================
object
==========================

# result: 5

{ "foo": 5 }.foo

--------------------------

(program
  (comment)
  (query
    (object
      (entry
        (key
          (string))
        (value
          (integer))))
    (path
      (field))))

==========================
scalar
:error
==========================

# result: ~
#
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error
# syntax error

true.foo
true[0]

false.foo
false[0]

0.foo
0[0]

0.0.foo
0.0[0]

r'foo'.foo
r'foo'[0]

"foo".foo
"foo"[0]

null.foo
null[0]

t'2021-02-02T19:41:00Z'.foo
t'2021-02-02T19:41:00Z'[0]

--------------------------

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (ERROR
    (boolean)
    (boolean)
    (array
      (integer))
    (ERROR
      (boolean))
    (boolean)
    (array
      (integer))
    (ERROR
      (float))
    (integer)
    (array
      (integer))
    (ERROR
      (float))
    (float)
    (array
      (integer))
    (ERROR
      (regex))
    (regex)
    (array
      (integer))
    (ERROR
      (string))
    (string)
    (array
      (integer))
    (ERROR
      (null))
    (null)
    (array
      (integer))
    (ERROR
      (timestamp))
    (timestamp))
  (array
    (integer)))

==========================
types
==========================

# This checks that a container type is considered a valid query target,
# regardless of the inner types it contains.
#
# result: "two"

{
    "string": "foo",
    "string_escaped": "foo\"bar\"\nbaz",
    "integer": 123,
    "integer_underscore": 123_001,
    "float": 123.456,
    "float_underscore": 123_001.456_002,
    "boolean_true": true,
    "boolean_false": false,
    "object": { "one": "two" },
    "array": ["one", "two"],
    "raw_string": s'foo"bar"\n\'baz\'',
    "timestamp": t'2021-02-02T19:41:00Z',
    "regex": r'foo?bar',
    "null": null,
}.object.one

--------------------------

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (query
    (object
      (entry
        (key
          (string))
        (value
          (string)))
      (entry
        (key
          (string))
        (value
          (string
            (escape_sequence)
            (escape_sequence)
            (escape_sequence))))
      (entry
        (key
          (string))
        (value
          (integer)))
      (entry
        (key
          (string))
        (value
          (integer)))
      (entry
        (key
          (string))
        (value
          (float)))
      (entry
        (key
          (string))
        (value
          (float)))
      (entry
        (key
          (string))
        (value
          (boolean)))
      (entry
        (key
          (string))
        (value
          (boolean)))
      (entry
        (key
          (string))
        (value
          (object
            (entry
              (key
                (string))
              (value
                (string))))))
      (entry
        (key
          (string))
        (value
          (array
            (string)
            (string))))
      (entry
        (key
          (string))
        (value
          (raw_string
            (raw_string_escape_sequence)
            (raw_string_escape_sequence))))
      (entry
        (key
          (string))
        (value
          (timestamp)))
      (entry
        (key
          (string))
        (value
          (regex)))
      (entry
        (key
          (string))
        (value
          (null))))
    (path
      (field)
      (field))))

==========================
variable
==========================

# result: 2

foo = { "bar": 2 }
foo.bar

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (ident))
    right: (object
      (entry
        (key
          (string))
        (value
          (integer)))))
  (query
    (ident)
    (path
      (field))))
